--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <body>
+    <center><h1>Ciao Mondo!</h1>
+    <p>Questo è un sito web hostato con github.</p></center>
+  </body>
 </html>
