--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <center><h1>Ciao Mondo!</h1>
-    <p>Questo è un sito web hostato con Github, 
-      il suo dominio personale è <a href="http://fenix-hub.ml/">fenix-hub.ml</a></p></center>
+    <p>Questo è un sito web hostato con Github! 
+      Il suo vero dominio è <a href="https://fenix-hub.github.io/">fenix-hub.github.io</a>, ma il suo dominio personale è <a href="http://fenix-hub.ml/">fenix-hub.ml</a></p></center>
   </body>
 </html>
