--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>fenix-hub</title>
+  </head>
   <body>
     <center><h1>Ciao Mondo!</h1>
     <p>Questo è un sito web hostato con Github! 
