--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>fenix-hub</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <center><h1>Ciao Mondo!</h1>
