--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <center><h1>CIAO MONDO!</h1>
+    <center><h1>Ciao Mondo!</h1>
     <p>Questo è un sito web hostato con Github! 
       Il suo vero dominio è <a href="https://fenix-hub.github.io/">fenix-hub.github.io</a>, ma il suo dominio personale è <a href="http://fenix-hub.ml/">fenix-hub.ml</a></p></center>
   </body>
