--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Nicolò Santilio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Nicolò Santilio webfolio">
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="fenixhubicon.png" sizes="any" type="image/png">
   </head>
   <body>
