--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Nicolò Santilio webfolio">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="fenixhubicon.png" sizes="any" type="image/png">
+    <link rel="icon" href="favicon.ico?v=1.1" sizes="any">
   </head>
   <body>
     <h2>Hi, my name is</h2>
     <h1>Nicolò Santilio</h1>
     <h3>and I do stuff related to <i>robotics</i> and <i>computer science</i>.</h3>
+    <br>
+    <ul class="socials">
+      <li><a href="https://github.com/fenix-hub" target="_blank" rel="noreferrer">Github</a></li>
+      <li><a href="https://twitter.com/fenixhub" target="_blank" rel="noreferrer">Twitter</a></li>
+      <li><a href="https://www.linkedin.com/in/nicolò-santilio-52b714b1/" target="_blank" rel="noreferrer">LinkedIn</a></li>
+      <li><a href="https://www.facebook.com/profile.php?id=100014217049374" target="_blank" rel="noreferrer">Facebook</a></li>
+      <li><a href="https://discord.gg/KnJGY9S" target="_blank" rel="noreferrer">Discord</a></li>
+      <li><a href="https://join.skype.com/invite/iMJmdMAyjtIQ" target="_blank" rel="noreferrer">Skype</a></li>
+      <li><a href="mailto:nicolo.santilio@outlook.com" target="_blank" rel="noreferrer">Mail</a></li>
+  </ul>
   </body>
 </html>
 
