--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <h2>Hi, my name is</h2>
-    <h1>Nicolò Santilio</h1>
+    <h1 id="nicolo-santilio">Nicolò Santilio</h1>
     <h3>and I do stuff related to <i>robotics</i> and <i>computer science</i>.</h3>
     <br>
+    <h3 id="socials-&-contacts">Socials & Contacts</h3>
     <ul class="socials">
       <li><a href="https://github.com/fenix-hub" target="_blank" rel="noreferrer">Github</a></li>
       <li><a href="https://twitter.com/fenixhub" target="_blank" rel="noreferrer">Twitter</a></li>
@@ -22,6 +23,14 @@
       <li><a href="https://join.skype.com/invite/iMJmdMAyjtIQ" target="_blank" rel="noreferrer">Skype</a></li>
       <li><a href="mailto:nicolo.santilio@outlook.com" target="_blank" rel="noreferrer">Mail</a></li>
   </ul>
+  <hr>
+  <div id="footer">
+    <p>
+      This website is based on <a href="https://perfectmotherfuckingwebsite.com/">perfectmotherfuckingwebsite.com</a>
+    </p>
+    <p><a id="source-code" href="https://github.com/fenix-hub/fenix-hub.github.io">👁️</a> — Made with ❤️ — <a id="license" href="https://github.com/fenix-hub/fenix-hub.github.io/LICENSE">📜</a>
+    </p>
+  </div>
   </body>
 </html>
 
