--- a/index.html
+++ b/index.html
@@ -9,22 +9,56 @@
     <link rel="icon" href="favicon.ico?v=1.1" sizes="any">
   </head>
   <body>
-    <h2>Hi, my name is</h2>
-    <h1 id="nicolo-santilio">Nicolò Santilio</h1>
-    <h3>and I do stuff related to <i>robotics</i> and <i>computer science</i>.</h3>
+    <div class="index">
+      <h2>👋 Hi, my name is</h2>
+      <h1 id="nicolo-santilio">Nicolò Santilio</h1>
+      <h3>and I do stuff related to <i>robotics</i> and <i>computer science</i>.</h3>
+    </div>
     <br>
-    <h3 id="socials-&-contacts">Socials & Contacts</h3>
-    <ul class="socials">
-      <li><a href="https://github.com/fenix-hub" target="_blank" rel="noreferrer">Github</a></li>
-      <li><a href="https://twitter.com/fenixhub" target="_blank" rel="noreferrer">Twitter</a></li>
-      <li><a href="https://www.linkedin.com/in/nicolò-santilio-52b714b1/" target="_blank" rel="noreferrer">LinkedIn</a></li>
-      <li><a href="https://www.facebook.com/profile.php?id=100014217049374" target="_blank" rel="noreferrer">Facebook</a></li>
-      <li><a href="https://discord.gg/KnJGY9S" target="_blank" rel="noreferrer">Discord</a></li>
-      <li><a href="https://join.skype.com/invite/iMJmdMAyjtIQ" target="_blank" rel="noreferrer">Skype</a></li>
-      <li><a href="mailto:nicolo.santilio@outlook.com" target="_blank" rel="noreferrer">Mail</a></li>
-  </ul>
-  <hr>
-  <div id="footer">
+
+    <div class="socials">      
+      <h4 id="socials-&-contacts">Socials & Contacts</h4>
+      <ul>
+        <li><a href="https://blog.nicolosantilio.com/" target="_blank">Blog</a></li>
+        <li><a href="https://github.com/fenix-hub" target="_blank" rel="noreferrer">GitHub</a></li>
+        <li><a href="https://twitter.com/fenixhub" target="_blank" rel="noreferrer">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/nicolò-santilio-52b714b1/" target="_blank" rel="noreferrer">LinkedIn</a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100014217049374" target="_blank" rel="noreferrer">Facebook</a></li>
+        <li><a href="https://discordapp.com/users/393787307637080064" target="_blank" rel="noreferrer">Discord</a></li>
+        <li><a href="https://join.skype.com/invite/iMJmdMAyjtIQ" target="_blank" rel="noreferrer">Skype</a></li>
+        <li><a href="mailto:nicolo.santilio@outlook.com" target="_blank" rel="noreferrer">Mail</a></li>
+      </ul>
+    </div>
+    <br>
+    
+    <div class="about-me">
+      <h4 id="about-me">📖 About Me</h4>
+      <p>1997, Automation Engineer.</p>
+
+      <p>From <i>Isaac Asimov</i> to <i>Masamune Shirow</i>, from the ethics behind <i>artificial intelligence</i> to the dirty and raw <i>cyberpunk</i>, the worlds of computer science and robotics have always fascinated me.</p>
+
+      <p>I'm mainly interested in contributing to open-source projects and frameworks.
+        I enjoy developing tools that could help other users and developers all around the world.</p>
+
+      <p>You can get more about <i>me</i>, <i>my education</i> and <i>my current job</i> on <a href="https://www.linkedin.com/in/nicolò-santilio-52b714b1/" target="_blank">my LinkedIn page</a> or <a href="CV_Nicolò_Santilio_EN.pdf" target="_blank">downloading my resumee</a>.</p>
+    </div>
+    <br>
+
+    <div class="portfolio">
+      <h4 id="portfolio">🗂️ Portfolio</h4>
+      <p>Most of my projects involve robotics and micro-controllers, videogame development, tools and softwares.</p>
+
+      <p>You can find the <i>source code</i> of all my public projects on <a href="https://github.com/fenix-hub" target="_blank">my GitHub page</a>.<br>
+      You can also <i>read</i> about my projects and studies on <a href="https://blog.nicolosantilio.com/" target="_blank">my blog</a>.</p>
+
+      <p>While you can both <i>read</i> and <i>use</i> what I'm publishing online, you can also find a complete list of all my projects with some details on this page 👇</p>
+
+      <h2 style="text-align: center;"><a href="portfolio.html">/portfolio</a></h2>
+    </div>
+  </div>
+  <br>
+  <div class="footer">
+    <hr>
     <p>
       This website is based on <a href="https://perfectmotherfuckingwebsite.com/">perfectmotherfuckingwebsite.com</a>
     </p>
