create portfolio page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <p>While you can both <i>read</i> and <i>use</i> what I'm publishing online, you can also find a complete list of all my projects with some details on this page 👇</p>
 
-      <h2 style="text-align: center;"><a href="portfolio.html">/portfolio</a></h2>
+      <h2 style="text-align: center;"><a href="portfolio.html">➡️ /portfolio</a></h2>
     </div>
   </div>
   <br>
