--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p>
       This website is based on <a href="https://perfectmotherfuckingwebsite.com/">perfectmotherfuckingwebsite.com</a>
     </p>
-    <p><a id="source-code" href="https://github.com/fenix-hub/fenix-hub.github.io">👁️</a> — Made with ❤️ — <a id="license" href="https://github.com/fenix-hub/fenix-hub.github.io/LICENSE">📜</a>
+    <p><a id="source-code" href="https://github.com/fenix-hub/fenix-hub.github.io">👁️</a> — Made with ❤️ — <a id="license" href="https://github.com/fenix-hub/fenix-hub.github.io/blob/master/LICENSE">📜</a>
     </p>
   </div>
   </body>
