--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p>I'm mainly interested in contributing to open-source projects and frameworks.
         I enjoy developing tools that could help other users and developers all around the world.</p>
 
-      <p>You can get more about <i>me</i>, <i>my education</i> and <i>my current job</i> on <a href="https://www.linkedin.com/in/nicolò-santilio-52b714b1/" target="_blank">my LinkedIn page</a> or <a href="CV_Nicolò_Santilio_EN.pdf" target="_blank">downloading my resumee</a>.</p>
+      <p>You can get more about <i>me</i>, <i>my education</i> and <i>my current job</i> on <a href="https://www.linkedin.com/in/nicolò-santilio-52b714b1/" target="_blank">my LinkedIn page</a>.</p>
     </div>
     <br>
 
