--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Nicolò Santilio</title>
+    <title>[и] | Nicolò Santilio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Nicolò Santilio webfolio">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico?v=1.1" sizes="any">
+    <!--<link rel="icon" href="favicon.ico?v=1.1" sizes="any">-->
   </head>
   <body>
     <div class="index">
