--- a/portfolio.html
+++ b/portfolio.html
@@ -2,9 +2,9 @@
     <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Nicolò Santilio</title>
+        <title>[и] | Nicolò Santilio > Webfolio</title>        
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Nicolò Santilio webfolio">
+        <meta name="description" content="Nicolò Santilio website (webfolio)">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="favicon.ico?v=1.1" sizes="any">
     </head>
