--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>[и] | Nicolò Santilio</title>
+    <title>[и] | Nicolò Santilio > Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Nicolò Santilio webfolio">
+    <meta name="description" content="Nicolò Santilio website (home)">
     <link rel="stylesheet" href="style.css">
     <!--<link rel="icon" href="favicon.ico?v=1.1" sizes="any">-->
   </head>
