--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Nicolò Santilio website (webfolio)">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="favicon.ico?v=1.1" sizes="any">
+        <!--<link rel="icon" href="favicon.ico?v=1.1" sizes="any">-->
     </head>
     <body>
         <h4>↩️ <a href="index.html">/index</a></h4>
