--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>[и] | Nicolò Santilio > Webfolio</title>        
+        <title>Nicolò Santilio</title>        
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Nicolò Santilio website (webfolio)">
         <link rel="stylesheet" href="style.css">
