--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
             <h1 id="portfolio">Portfolio</h1>
             <div class="list">
             <ul>
-                <li>[GDCache](/gdcache) - A (POC™) GDScript Caching Algorithms and Replacement Policies addon for Godot Engine.</li>
+                <li><a href="/gdcache">GDCache</a> - A (POC™) GDScript Caching Algorithms and Replacement Policies addon for Godot Engine.</li>
             </ul>
             </div>
         </div>
