--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,8 @@
             <h1 id="portfolio">Portfolio</h1>
             <div class="list">
             <ul>
-                <li><a href="/gdcache">GDCache</a> - A (POC™) GDScript Caching Algorithms and Replacement Policies addon for Godot Engine.</li>
+                <li><a href="/gdcache">GDCache</a> - GDScript library for Caching Algorithms and Replacement Policies for Godot Engine.</li>
+                <li><a href="/godot-engine.jwt">Godot Engine - JWT</a> - RFC 7519-compliant JSON Web Token library for Godot Engine written in GDScript</li>
             </ul>
             </div>
         </div>
