--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,8 @@
                 <li><a href="/gdcache">GDCache</a> - GDScript library for Caching Algorithms and Replacement Policies for Godot Engine</li>
                 <li><a href="/godot-engine.jwt">Godot Engine - JWT</a> - RFC 7519-compliant JSON Web Token library for Godot Engine written in GDScript</li>
                 <li><a href="/unirest-gdscript">Godot Engine HTTPClient extension inspired by Kong Unirest written in GDScript</li>
+                <li><a href="/godot-engine.otp">Godot Engine plugin to generate RFC4226 and RFC6238 compliant One Time Passwords in GDScript</li>
+                <li><a href="/open-authenticator">Open source, offline, multiplatform 2fa software. Alternative to Google and Microsoft authenticator made with Godot Engine 4</li>
             </ul>
             </div>
         </div>
